--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 <body>
 
     <h1 class="h">Tic Toc Toe</h1>
-    <p class="current">current player-<span id="curet-play">x<span></p>
+    <p class="current">current player-<span id="curet-play">Boy<span></p>
     <div class="board">
         <div class="row">
             <div class="box" onclick="selector(0)"></div>
