restart function added

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         }
 
 
-        /* CSS */
+       
         .button-82-pushable {
             position: relative;
             border: none;
@@ -291,43 +291,7 @@
                 transform 600ms cubic-bezier(.3, .7, .4, 1);
         }
 
-        @media (min-width: 768px) {
-            .button-82-front {
-                font-size: 1.25rem;
-                padding: 12px 42px;
-            }
-        }
-
-        .button-82-pushable:hover {
-            filter: brightness(110%);
-            -webkit-filter: brightness(110%);
-        }
-
-        .button-82-pushable:hover .button-82-front {
-            transform: translateY(-6px);
-            transition:
-                transform 250ms cubic-bezier(.3, .7, .4, 1.5);
-        }
-
-        .button-82-pushable:active .button-82-front {
-            transform: translateY(-2px);
-            transition: transform 34ms;
-        }
-
-        .button-82-pushable:hover .button-82-shadow {
-            transform: translateY(4px);
-            transition:
-                transform 250ms cubic-bezier(.3, .7, .4, 1.5);
-        }
-
-        .button-82-pushable:active .button-82-shadow {
-            transform: translateY(1px);
-            transition: transform 34ms;
-        }
-
-        .button-82-pushable:focus:not(:focus-visible) {
-            outline: none;
-        }
+       
     </style>
 </head>
 
@@ -368,7 +332,7 @@
         <p class="he">Match Draw!</p>
         <p class="p">do you want to play again </p>
 
-        <button class="button-82-pushable" type="button1" onclick="location.reload()">
+        <button class="button-82-pushable" type="button1" onclick="restart()">
             <span class="button-82-shadow"></span>
             <span class="button-82-edge"></span>
             <span class="button-82-front text">
